added a team section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </nav>
         <ul>
             <li>
-                <a href="mailto:info@devstudio.com">
+                <a href="mailto:info@devstudio.com" lang="en">
                     info@devstudio.com
                 </a>
             </li>
@@ -95,15 +95,66 @@
         </h2>
         <ul>
             <li>
-                <img src="./images/dowedo.jpg" alt="Людина щось програмуєза завданням">
+                <img src="./images/dowedo.jpg" alt="Людина щось програмуєза завданням" width="370" height="294">
             </li>
             <li>
-                <img src="./images/dowedo1.jpg" alt="Людина обирає зручний дизайн для додатку">
+                <img src="./images/dowedo1.jpg" alt="Людина обирає зручний дизайн для додатку" width="370" height="294">
             </li>
             <li>
-                <img src="./images/dowedo2.jpg" alt="Людина обирає колір для дизайну">
+                <img src="./images/dowedo2.jpg" alt="Людина обирає колір для дизайну" width="370" height="294">
             </li>
         </ul>
     </section>
+    <section>
+        <h2>
+            Наша команда
+        </h2>
+        <ul>
+            <li>
+                <img src="./images/team.jpg" alt="Доглянутий чоловік в червоній сорочці, окулярах та з бородою, котрий посміхається" width="270" height="260">
+                <h3>
+                    Ігор Дем'яненко
+                </h3>
+                <p lang="en">
+                    Product Designer
+                </p>
+            </li>
+            <li>
+                <img src="./images/team1.jpg" alt="Приєємна жінка в костюмі та окулярах, котра посміхається" width="270" height="260">
+                <h3>
+                    Ольга Рєпіна
+                </h3>
+                <p lang="en">
+                    Frontend Developer
+                </p>
+            </li>
+            <li>
+                <img src="./images/team2.jpg" alt="Радісний чоловік в сорочці" width="270" height="260">
+                <h3>
+                    Микола Тарасов
+                </h3>
+                <p lang="en">
+                    Marketing
+                </p>
+            </li>
+            <li>
+                <img src="./images/team3.jpg" alt="Чоловік в чорній футболці та окулярах, круто посміхається" width="270" height="260">
+            </li>
+            <li>
+                <h3>
+                    Михайло Єрмаков
+                </h3>
+                <p lang="en">
+                    UI Designer
+                </p>
+            </li>
+        </ul>
+    </section>
+    <footer>
+        <a href="/">
+            WebStudio
+        </a>
+        
+    </footer>
 </body>
 </html>
