--- a/index.html
+++ b/index.html
@@ -29,18 +29,14 @@
                 </li>
             </ul>
         </nav>
-        <ul>
-            <li>
-                <a href="mailto:info@devstudio.com" lang="en">
-                    info@devstudio.com
-                </a>
-            </li>
-            <li>
-                <a href="tel:+380961111111">
-                    +38 096 111 11 11
-                </a>
-            </li>
-        </ul>
+        <address>
+                    <a href="mailto:info@devstudio.com" lang="en">
+                        info@devstudio.com
+                    </a>
+                    <a href="tel:+380961111111">
+                        +38 096 111 11 11
+                    </a>
+        </address>
     </header>
     <section>
         <h1>
